# Klein

./: CMakeLists.txt  LICENSE
Klein/: CMakeLists.txt
Klein/include/Klein/: Delegate.hpp  Engine.hpp
Klein/include/Klein/Collections/: EGridResizingRule.hpp  Grid.hpp  ResizableGrid.hpp
Klein/include/Klein/EventSystem/: Event.hpp  ObserverID.hpp
Klein/include/Klein/Exportables/: Exportable.hxx
Klein/include/Klein/Hashing/: BaseStringHash.hpp  StringHash.hpp
Klein/include/Klein/InputSystem/: EInputEventValueType.hpp  IInputHandler.hpp  InputEvent.hpp
Klein/include/Klein/InputSystem/Raylib/: RaylibGamepadInputEvents.hpp  RaylibInputHandler.hpp
Klein/include/Klein/Math/: Bounds.hpp  Easing.hpp  Ratio.hpp  Rectangle.hpp  Vector2.hpp
Klein/include/Klein/Raylib/: RaylibEngine.hpp
Klein/include/Klein/Rendering/: Color.hpp  IRenderer.hpp  RenderingContext.hpp  RenderingContextElement.hpp
Klein/include/Klein/Rendering/Raylib/: RaylibWindowRenderer.hpp
Klein/include/Klein/ResourceManagement/: AResourceManager.hpp  FileSystem.hpp  ResourceID.hpp
Klein/include/Klein/ResourceManagement/Raylib/: RaylibTexture2DResourceManager.hpp
Klein/include/Klein/SceneManagement/: Node.hpp
Klein/include/Klein/Scripting/: Script.hpp
Klein/include/Klein/Scripting/Rendering/: CameraScript.hpp  SpriteRendererScript.hpp
Klein/include/Klein/Scripting/UI/: CanvasScript.hpp  UIElementNodeTraversalData.hpp  UIElementScript.hpp
Klein/src/: Engine.cpp
Klein/src/EventSystem/: ObserverID.cpp
Klein/src/InputSystem/: InputEvent.cpp
Klein/src/InputSystem/Raylib/: RaylibGamepadInputEvents.cpp  RaylibInputHandler.cpp
Klein/src/Raylib/: RaylibEngine.cpp
Klein/src/Rendering/: RenderingContext.cpp  RenderingContextElement.cpp
Klein/src/Rendering/Raylib/: RaylibWindowRenderer.cpp
Klein/src/ResourceManagement/: FileSystem.cpp
Klein/src/ResourceManagement/Raylib/: RaylibTexture2DResourceManager.cpp
Klein/src/SceneManagement/: Node.cpp
Klein/src/Scripting/: Script.cpp
Klein/src/Scripting/Rendering/: CameraScript.cpp  SpriteRendererScript.cpp
Klein/src/Scripting/UI/: CanvasScript.cpp  UIElementScript.cpp
KleinTest/: CMakeLists.txt
KleinTest/include/KleinTest/Tests/: ITests.hpp
KleinTest/include/KleinTest/Tests/Collections/: GridTests.hpp
KleinTest/include/KleinTest/Tests/Math/: Vector2Tests.hpp
KleinTest/src/: main.cpp
KleinTest/src/Tests/Collections/: GridTests.cpp
KleinTest/src/Tests/Math/: Vector2Tests.cpp
NGE/: CMakeLists.txt
NGE/include/NGE/: Delegate.hpp  Engine.hpp
NGE/include/NGE/Collections/: EGridResizingRule.hpp  Grid.hpp  ResizableGrid.hpp
NGE/include/NGE/EventSystem/: Event.hpp  ObserverID.hpp
NGE/include/NGE/Exportables/: Exportable.hxx
NGE/include/NGE/Hashing/: BaseStringHash.hpp  StringHash.hpp
NGE/include/NGE/InputSystem/: EInputEventValueType.hpp  IInputHandler.hpp  InputEvent.hpp
NGE/include/NGE/InputSystem/Raylib/: RaylibGamepadInputEvents.hpp  RaylibInputHandler.hpp
NGE/include/NGE/Math/: Bounds.hpp  Easing.hpp  Ratio.hpp  Rectangle.hpp  Vector2.hpp
NGE/include/NGE/Rendering/: Color.hpp  IRenderer.hpp  RenderingContext.hpp  RenderingContextElement.hpp
NGE/include/NGE/Rendering/Raylib/: RaylibWindowRenderer.hpp
NGE/include/NGE/ResourceManagement/: AResourceManager.hpp  FileSystem.hpp  ResourceID.hpp
NGE/include/NGE/ResourceManagement/Raylib/: RaylibTexture2DResourceManager.hpp
NGE/include/NGE/SceneManagement/: Node.hpp
NGE/include/NGE/Scripting/: Script.hpp
NGE/include/NGE/Scripting/Rendering/: CameraScript.hpp  SpriteRendererScript.hpp
NGE/include/NGE/Scripting/UI/: CanvasScript.hpp  UIElementNodeTraversalData.hpp  UIElementScript.hpp
NGE/src/: Engine.cpp
NGE/src/EventSystem/: ObserverID.cpp
NGE/src/InputSystem/: InputEvent.cpp
NGE/src/InputSystem/Raylib/: RaylibGamepadInputEvents.cpp  RaylibInputHandler.cpp
NGE/src/Rendering/: RenderingContext.cpp  RenderingContextElement.cpp
NGE/src/Rendering/Raylib/: RaylibWindowRenderer.cpp
NGE/src/ResourceManagement/: FileSystem.cpp
NGE/src/ResourceManagement/Raylib/: RaylibTexture2DResourceManager.cpp
NGE/src/SceneManagement/: Node.cpp
NGE/src/Scripting/: Script.cpp
NGE/src/Scripting/Rendering/: CameraScript.cpp  SpriteRendererScript.cpp
NGE/src/Scripting/UI/: CanvasScript.cpp  UIElementScript.cpp
NGETest/: CMakeLists.txt
NGETest/include/NGETest/Tests/: ITests.hpp
NGETest/include/NGETest/Tests/Collections/: GridTests.hpp
NGETest/include/NGETest/Tests/Math/: Vector2Tests.hpp
NGETest/src/: main.cpp
NGETest/src/Tests/Collections/: GridTests.cpp
NGETest/src/Tests/Math/: Vector2Tests.cpp
